--- a/basics/basic_python.ipynb
+++ b/basics/basic_python.ipynb
@@ -925,17 +925,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A defined maximum, all edge weights are less than this value (You can use math.inf instead)\n",
+    "max_int = 100000\n",
+    "\n",
+    "\n",
+    "class Graph:\n",
+    "    def __init__(self, v):\n",
+    "        self.v = v\n",
+    "        # adjacency matrix\n",
+    "        self.graph = [[0 for column in range(v)]\n",
+    "                      for row in range(v)]\n",
+    "\n",
+    "    def min_distance(self, dist, dijkstra_set):\n",
+    "        min_value = max_int\n",
+    "        min_index = 0\n",
+    "        for v in range(self.v):\n",
+    "            if dist[v] < min_value and dijkstra_set[v] == False:\n",
+    "                min_value = dist[v]\n",
+    "                min_index = v\n",
+    "        return min_index\n",
+    "\n",
+    "    def dijkstra(self, src):\n",
+    "        # Saving the distance of every vertex initialized by max_int\n",
+    "        dist = [max_int] * self.v\n",
+    "\n",
+    "        # Distance of source should be zero to itself\n",
+    "        dist[src] = 0\n",
+    "\n",
+    "        # The dijkstra_set indicates whether the distance of a vertex is finalized or not\n",
+    "        dijkstra_set = [False] * self.v\n",
+    "\n",
+    "        for i in range(self.v):\n",
+    "            # Pick the minimum distance vertex from the set of vertices not yet finalized.\n",
+    "            # u is always equal to src in first iteration\n",
+    "            u = self.min_distance(dist, dijkstra_set)\n",
+    "\n",
+    "            # Put the minimum distance vertex in the finalized vertexes.\n",
+    "            dijkstra_set[u] = True\n",
+    "\n",
+    "            # Update dist value of the adjacent vertices of the picked vertex only if the current\n",
+    "            # distance is greater than new distance and the vertex in not in the finalized list\n",
+    "            for v in range(self.v):\n",
+    "                if self.graph[u][v] > 0 and dijkstra_set[v] == False and dist[v] > dist[u] + self.graph[u][v]:\n",
+    "                    dist[v] = dist[u] + self.graph[u][v]\n",
+    "        return dist\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum distances from node 0 are:\n",
+      "node 0 minimum distance is 0\n",
+      "node 1 minimum distance is 4\n",
+      "node 2 minimum distance is 12\n",
+      "node 3 minimum distance is 19\n",
+      "node 4 minimum distance is 21\n",
+      "node 5 minimum distance is 11\n",
+      "node 6 minimum distance is 9\n",
+      "node 7 minimum distance is 8\n",
+      "node 8 minimum distance is 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = Graph(9)\n",
+    "g.graph = [[0, 4, 0, 0, 0, 0, 0, 8, 0],\n",
+    "           [4, 0, 8, 0, 0, 0, 0, 11, 0],\n",
+    "           [0, 8, 0, 7, 0, 4, 0, 0, 2],\n",
+    "           [0, 0, 7, 0, 9, 14, 0, 0, 0],\n",
+    "           [0, 0, 0, 9, 0, 10, 0, 0, 0],\n",
+    "           [0, 0, 4, 14, 10, 0, 2, 0, 0],\n",
+    "           [0, 0, 0, 0, 0, 2, 0, 1, 6],\n",
+    "           [8, 11, 0, 0, 0, 0, 1, 0, 7],\n",
+    "           [0, 0, 2, 0, 0, 0, 6, 7, 0]\n",
+    "               ]\n",
+    "\n",
+    "dist = g.dijkstra(0)\n",
+    "print(\"minimum distances from node 0 are:\")\n",
+    "for node in range(g.v):\n",
+    "    print(\"node \" + str(node) + \" minimum distance is \" + str(dist[node]))"
+   ]
   }
  ],
  "metadata": {
